# esp32OTAupdatemanager

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old  tls.txt
envdata/: deviceid  wifipass  wifissid
main/: CMakeLists.txt  main.c
main/lib/: common.h  gen_auth.c  gen_auth.h  helpers.h  https.c  https.h  nvs.c  nvs.h  ota.c  ota.h  wifi.c  wifi.h
